fix: page ToC overflowing into footer

--- a/@antv/gatsby-theme-antv/site/templates/markdown.module.less
+++ b/@antv/gatsby-theme-antv/site/templates/markdown.module.less
@@ -242,7 +242,11 @@
   font-size: 12px;
   background: #fff;
   max-height: 100vh;
-  overflow: auto;
+  overflow: scroll;
+
+  position: sticky;
+  top: 0;
+  padding: 8px 0;
 
   ul > li {
     list-style: none !important;
